...
        app:layout_constraintBottom_toTopOf="@+id/gain_display"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/monster_img"
        app:layout_constraintTop_toBottomOf="@+id/title">

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="3"
            android:entries="@array/monster_names"
            android:popupBackground="@android:color/transparent" />

        <TextView
            android:id="@+id/health_display"
            style="@style/activity_gain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:text="@string/monster_hp"
...
    </LinearLayout>

    <TextView
        android:id="@+id/gain_display"
        style="@style/activity_gain"
        android:layout_marginBottom="12dp"
        app:layout_constraintBottom_toTopOf="@+id/time_section"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"></TextView>

    <LinearLayout
        android:id="@+id/time_section"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="15dp"
        android:layout_marginBottom="60dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/stamina_section"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/timer_icon"
            android:layout_width="80dp"
...
            android:textColor="@color/final_gold"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="5:09"></TextView>

        <ImageButton
            android:id="@+id/start_pause_resume_button"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center_vertical"
            android:layout_marginHorizontal="15dp"
            android:adjustViewBounds="true"
            android:background="@android:color/transparent"
            android:padding="0dp"
            android:scaleType="fitXY"
            android:tint="@color/final_gold"
            app:srcCompat="@drawable/ic_baseline_play_circle_filled_24"></ImageButton>

        <ImageButton
            android:id="@+id/reset_button"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center_vertical"
            android:layout_marginHorizontal="15dp"
            android:adjustViewBounds="true"
            android:background="@android:color/transparent"
...
