<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:background="@android:color/background_dark"
    >

    <EditText
        android:id="@+id/input_email"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:backgroundTint="@android:color/white"
        android:textColorHint="#C89FFD"
        android:textColor="#C89FFD"
        android:fontFamily="@font/advent_pro_semibold"
         />


    <EditText
        android:id="@+id/input_password"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:hint="@string/password"
        android:imeActionLabel="sign in"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_email"
        android:backgroundTint="@android:color/white"
        android:textColorHint="#C89FFD"
        android:textColor="#C89FFD"
        android:fontFamily="@font/advent_pro_semibold"
        />


    <Button
        android:id="@+id/login_btn"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:onClick="loginButton"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_password"
        android:textColor="@color/colorPrimaryDark"
        android:fontFamily="@font/advent_pro_semibold"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/signup_line"
        android:layout_width="239dp"
        android:layout_height="17dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:focusable="true"
        android:onClick="signUp"

        android:text="@string/sign_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_btn"
        style="@style/tutorial_text_style"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:onClick="forgotPasswordScreen"
        android:text="Forgot or want to change your password?"
        app:layout_constraintBottom_toTopOf="@+id/signup_line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_btn"
        style="@style/tutorial_text_style"/>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="330dp"
        android:layout_height="251dp"
        android:layout_marginTop="38dp"
        android:rotation="-0.5"
        app:layout_constraintBottom_toTopOf="@+id/input_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/new_logo" />


</androidx.constraintlayout.widget.ConstraintLayout>