<resources>
    <!-- For loading Login Page attributes -->
    <string name="app_name">LittleYNC</string>
    <string name="email_field">Email</string>
    <string name="password_field">Password</string>
    <string name="sign_up">Don\'t have an account? Sign up here.</string>
    <string name="avatar_description">go to the random page for testing purpose</string>



    <!-- For loading Travel Page attributes -->
    <string name="woodcutting_name"><u>Cendana Forest</u></string>
    <string name="fishing_name"><u>Eco Pond</u></string>
    <string name="battleground_name"><u>Saga Battleground</u></string>
    <string name="armory_name"><u>DoS Armory Shop</u></string>
    <string name="marketplace_name"><u>Elm Buttery Trading Hub</u></string>
    <string name="login">Login</string>


    <!-- For loading User attributes -->
    <string name="wood_res">Wood:</string>
    <string name="wood_gear_level">Wood Gear Level:</string>
    <string name="fish_res">Fish:</string>
    <string name="fish_gear_level">Fish Gear Level:</string>
    <string name="gold_res">Gold:</string>
    <string name="combat_gear_level">Combat Gear Level:</string>
    <string name="agg_level">Aggregate Level:</string>
    <string name="agg_level_progress"> / </string>
    <string name="gain_display"> </string>

    <!-- For loading Monster attributes -->
    <string name="monster_hp">HP:</string>
    <string-array name="monster_names">
        <item>Prof. Sergey</item>
        <item>Prof. Stamps</item>
        <item>Prof. Danvy</item>
        <item>Prof. Wertz</item>
        <item>Prof. Cheung</item>
        <item>Prof. Field</item>
        <item>Prof. Liu</item>
        <item>Prof. De Iorio</item>
        <item>Prof. Tolwinski</item>
        <item>Prof. Comaroff</item>
        <item>Prof. Hobor</item>
        <item>Prof. Bodin</item>
    </string-array>

    <!-- For loading Shop attributes -->
    <string name="to_level"> -> </string>
    <string name="cost">Cost:</string>

    <!-- Marketplace attributes -->
    <string name="marketplace1_title1">Resource</string>
    <string name="marketplace1_title2">Quantity</string>
    <string name="marketplace1_title3">Amount of gold</string>
    <string name="marketplace1_btn">Post this trade</string>
    <string name="marketplace2_title1">Username</string>
    <string name="marketplace2_title2">Item</string>
    <string name="marketplace2_title3">Quantity</string>
    <string name="marketplace2_title4">Total amount of gold</string>
    <string name="marketplace2_title5">Accept this trade</string>

    <string-array name="marketplace1_spinner">
        <item><u>fish</u></item>
        <item><u>wood</u></item>
        <item><u>gold</u></item>
    </string-array>

    <!-- For loading Stamina attributes -->
    <string name="stamina">Stamina: %s / 50</string>
    <string name="go_to_random_page_for_testing_purpose">Go to random page for testing purpose</string>
    <string name="email">EMAIL</string>
    <string name="password">PASSWORD</string>

    <!-- For tutorials -->
    <string name="tutorial_title"><u>Tutorial</u></string>
    <string name="read_the_tutorial"><u>Read the tutorial here.</u></string>
    <string name="tutorial_0">Welcome to LittleYNC! Please read the following short guide for a better experience:</string>
    <string name="tutorial_1">1. There are 2 primary resources in the game - fish and wood, and 1 currency. You can cut wood in Cendana Forest and fish in Eco Pond. To gain gold, you have to battle against monsters in Saga Battleground.
    </string>
    <string name="tutorial_2">2. This is an idle game. To proceed with an activity, all you need is to start the timer and restart the timer when your stamina is replenished. You will gain both the corresponding resource and experience points from each activity.</string>
    <string name="tutorial_3">3. You will only gain gold and experience points after a monster is defeated. You will gain nothing if you exit Saga Battleground before a monster is defeated.</string>
    <string name="tutorial_4">4. You can upgrade your fishing rod, woodcutting axe and monster-battling sword to more efficient ones in Dean of Students Office with some resources.</string>
    <string name="tutorial_5">5. You can trade with other users fish, wood or gold with any of the three in Elm Buttery Marketplace. You have to have enough resources to exchange to successfully post a trade. Each user is entitled to a total of 5 trades in the duration of the game, so use your trades carefully. You can also delete your trade.</string>
    <string name="tutorial_6">6. Check the leaderboard to see your ranking!</string>
    <string name="armory_display">Upgrade your gear here!</string>
</resources>